fix:alignment-glitch-scroll

--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    gap: 30px;
 }
 
 /* image slide down animation  starts */
@@ -103,76 +104,244 @@ body{
 /* custon line  ends*/
 
 
-/* .scroll{
-    display: flex;
-    gap: .75rem;
-    margin: 10px 0px 0px 10px;
-}
-
-
-.arrow{
-width: 0.625rem;
-height: 1.5rem;
-transform: rotate(90deg);
-animation: arrow_down 1.45s cubic-bezier(0.33, 1, 0.68, 1) 0s infinite forwards;
-overflow: hidden;
-
-}
-
-@keyframes arrow_down {
-    0% {
-            opacity: 0;
-            height: 0;
-            background-color: #787878;
-        }
-    
-        10% {
-            opacity: 0;
-            height: 0;
-            background-color: #787878;
-        }
-    
-        30% {
-            opacity: 1;
-            background-color: #787878;
-        }
-    
-        80% {
-            opacity: 1;
-            background-color: #787878;
-        }
-    
-        90% {
-            height: 110%;
-            background-color: #787878;
-        }
-    
-        100% {
-            opacity: 0;
-            height: 112.5%;
-            background-color: #787878;
-        }
-}
- */
-
-
  .container{
-    border: 1px solid red;
     height: auto;
-    width: 100%;
+    position: relative;
+    overflow: hidden;
  }
 
- .container span:nth-child(1){
-    width: 10px;
-    height: 10px;
-    background-color: blue;
+ .container span:nth-child(1){ 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background: linear-gradient(to right,transparent,#17f3fd);
+    animation:animate_top_border 2s linear infinite;
+
  }
+
+ @keyframes animate_top_border {
+    0%{
+        transform: translateX(-100%);
+    }
+    100%{
+        transform: translateX(100%);
+    }
+    
+ }
+ .container span:nth-child(3){ 
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background: linear-gradient(to left,transparent,#17f3fd);
+    animation:animate_bottom_border 2s linear infinite;
+
+ }
+
+ @keyframes animate_bottom_border {
+    0%{
+        transform: translateX(100%);
+    }
+    100%{
+        transform: translateX(-100%);
+    }
+    
+ }
+
+
+ .container span:nth-child(2){ 
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 3px;
+    height: 100%;
+    background: linear-gradient(to bottom,transparent,#17f3fd);
+    animation:animate_right_border 2s linear infinite;
+    animation-delay: 1s    ;
+
+ }
+
+ @keyframes animate_right_border {
+    0%{
+        transform: translateY(-100%);
+    }
+    100%{
+        transform: translateY(100%);
+    }
+    
+ }
+
+
+ .container span:nth-child(4){ 
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 3px;
+    height: 100%;
+    background: linear-gradient(to top ,transparent,#17f3fd);
+    animation:animate_bottom_border 2s linear infinite;
+    animation-delay: 1s;
+
+ }
+
+ @keyframes animate_bottom_border {
+    0%{
+        transform: translateX(100%);
+    }
+    100%{
+        transform: translateX(-100%);
+    }
+    
+ }
+
  .content h3{
     font-family: sans-serif;
     font-size: 1.25rem;
     letter-spacing: 0.05em;
     color: #787878;
  }
+
+
+.container1{
+    position: relative;
+
+}
+
+.scroll1{
+    display: flex;
+}
+.scroll1 figure{
+    transform: rotate(90deg);
+}
+ .scroll1 figure svg{
+    width: 15px;
+    height: 10px !important;
+    transform: rotate(90deg);
+    z-index: -1;
+    color: #787878;
+    opacity: 0;
+    animation: arrow1 1.45s cubic-bezier(0.33, 1, 0.68, 1) 0s infinite forwards;
+ }
+
+ @keyframes arrow1 {
+    0% {
+            opacity: 0;
+            height: 0;
+            transform: translateX(-100%);
+            
+
+        }
+    
+        10% {
+            opacity: 0;
+            height: 2px;
+        }
+    
+        30% {
+            opacity: 1;
+        }
+    
+        80% {
+            opacity: 1;
+            height: 70%;
+        }
+    
+        90% {
+            height: 90%;
+        }
+    
+        100% {
+            opacity: 1;
+            height: 100%;
+            transform: rotate(90deg);
+            transform: translateX(0%);
+        }
+    
+ }
+
+ /* scroll2 */
+  @keyframes arrow2 {
+    0%{
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        color:#787878;
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    20% {
+        position: absolute;
+        top: 20%;
+        left: 0%;
+        color: #787878;
+        opacity: 0;
+        transform: translateY(-80%);
+    }
+    50% {
+        position: absolute;
+        top: 50%;
+        left: 0%;
+        color: #787878;
+        opacity: 0.5;
+        transform: translateY(-60%);
+    }
+    70% {
+        position: absolute;
+        top: 70%;
+        left: 0%;
+        color: #787878;
+        opacity: 0.7;
+        transform: translateY(-40%);
+    }
+    90% {
+        position: absolute;
+        top: 90%;
+        left: 0%;
+        color: #787878;
+        opacity: 0.9;
+        transform: translateY(-20%);
+    }
+
+    100%{
+        position:absolute;
+        bottom: 0%;
+        left: 0%;
+        color:#787878;
+        opacity: 1;
+        transform: translateY(0%);
+    }
+  }
+
+  .container2{
+    position: relative;
+  }
+  .container2 .box{
+    position: absolute;
+    top: 0;
+    width: 20px;
+    height: 20px;
+    background-color: red;
+    z-index: 20;
+    animation: arrow2 2s;
+    animation-iteration-count: infinite
+  }
+
+  .scroll2{
+    display: flex;
+  }
+
+  .scroll2 figure{
+    transform: rotate(90deg);
+  }
+  .scroll2 figure svg{
+    width: 20px;
+    height: 20px;
+    color: #787878;
+  }
+
 
 
 
